fixing the global exception handler